--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="profile-container">
             <img src="936EF614-8FF8-49E3-A877-2E7206B31FCB.jpeg" alt="Tofan Teodor" class="profile-img">
         </div>
-        <h1>Tofan Teodorrrrr</h1>
+        <h1>Tofan Teodor</h1>
         <div class="social-links">
             <a href="https://github.com/tofanel" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
         
