changed name to index.html changed photo to tofan.jpeg

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Secțiunea Acasă -->
     <section id="home" class="container">
         <div class="profile-container">
-            <img src="936EF614-8FF8-49E3-A877-2E7206B31FCB.jpeg" alt="Tofan Teodor" class="profile-img">
+            <img src="tofan.jpeg" alt="Tofan Teodor" class="profile-img">
         </div>
         <h1>Tofan Teodor</h1>
         <div class="social-links">
