--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Secțiunea Acasă -->
     <section id="home" class="container">
         <div class="profile-container">
-            <img src="tofan.jpeg" alt="Tofan Teodor" class="profile-img">
+            <img src="./tofan.jpeg" alt="Tofan Teodor" class="profile-img">
         </div>
         <h1>Tofan Teodor</h1>
         <div class="social-links">
