--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 
                 // Typing effect
                 const typingText = document.querySelector('.typing-text');
-                const text = "Cyber Security Engineer | Full-Stack Developer | Problem Solver";
+                const text = "Cyber Security Engineer | Problem Solver";
                 let i = 0;
                 
                 function typeWriter() {
