--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     
     { 
         cmd: 'whoami', 
-        output: 'Cyber Security Specialist | Full-Stack Developer | Tech Enthusiast' 
+        output: 'Cyber Security Specialist | Tech Enthusiast' 
     },
     { 
         cmd: 'cat bio.txt', 
